# Machine-Learning-as-a-Service

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
docs/: Makefile  conf.py  index.rst  make.bat
models/forecasting/: prophet.joblib
models/predictive/: xgb_pipe.joblib
notebooks/: Islam_Tahmidul-24587139-forecasting_prophet.ipynb  Islam_Tahmidul-24587139-predictive_xgboost.ipynb
reports/: AT2_ExperimentReport_1&2_Tahmidul_Islam_24587139.docx  AT2_FinalReport_Tahmidul_Islam_24587139.docx
src/data/: create_dataset.py
